--- a/style.css
+++ b/style.css
@@ -29,11 +29,9 @@ body {
 }
 
 #display-result {
-    position: fixed;
-    top: 50%;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    
 
 }
 
